# CmakeWpilib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_main.cpp  wpilib-config.cmake  wpilib-config.cmake.in  wpiutil_main.cpp
include/: CameraServer.h
install_test_app/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/allwpilib/: CMakeLists.txt  WPILibJNIClasses.txt  WPILibVersion.cpp  WPILibVersion.java  wpihal-config.cmake  wpilibc-config.cmake
libraries/cscore/: CMakeLists.txt  cscore-config.cmake
libraries/ntcore/: CMakeLists.txt  ntcore-config.cmake
libraries/wpiutil/: CMakeLists.txt  wpiutil-config.cmake
src/: CameraServer.cpp  main.cpp
vision_app/: CMakeLists.txt
vision_app/src/: main.cpp
vision_app/src_no_cscore/: mainNoCscore.cpp
